# eGEOagents

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEO-SYSTEM-BLUEPRINT.md  LICENSE  README.md  USAGE.md  geo_eval.py  llm_client.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: coder.md  geo-analyzer.md  geo-indexer.md  geo-ranker.md  geo-rewriter.md
.claude/commands/: geo-audit.md  geo-batch.md  geo-compete.md  geo-optimize.md  geo-report.md  geo.md
.claude/output-styles/: geo-optimizer.md
.claude/skills/: validation-doctor.md
.github/: GITHUB_SETUP.md  PULL_REQUEST_TEMPLATE.md  qa-report.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/launch-materials/: good-first-issues.md  hackernews-post.md  launch-checklist.md  reddit-post.md  twitter-thread.md
.github/release-notes/: v1.0.0.md
.github/workflows/: ci.yml  qa-monthly.yml  release.yml
docs/: e-geo-gemini-pro.md  e-geo-gpt-5-2.md  e-geo-opus-4-5.md  evaluation.md  faq.md  getting-started.md  how-it-works.md  skills-sh-playbook.md
egeo/: __init__.py  __main__.py  agents.py  cli.py  pipeline.py  runtimes.py
eval/datasets/: geo_smoke.jsonl
examples/: sample-input.md  sample-output-optimized.md  sample-output-report.md  sample-output-schema.json
geo-output/: README.txt  report.md
openspec/: project.md
prompts/: meta_optimizer_system.txt  meta_optimizer_user.txt  ranker_system.txt  ranker_user.txt  rewriter_system.txt  rewriter_user.txt
scripts/: validate_jsonld.py  validate_skills.py
(+23 files in other folders)
